Cool, that actually works...

--- a/elviz/web/elviz.html
+++ b/elviz/web/elviz.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div id="stage2">
-    <div class="sample_container high400">
+    <div class="sample_container high400 centerText">
       <p>Click the button whenever the highlighted syllable starts. Click once to begin (and give focus for spacebar-ing ;).</p>
       <ul id="lyricsList">
       <li>Placeholder</li>
@@ -33,7 +33,7 @@
       <li>Here</li>
       <li>this is a great use of the first-child selector BTW</li>
       </ul>
-      <a href="#">Syllable.</a>
+      <input type="button" value="Syllable." />
     </div>
   </div>
 
