--- a/elviz/web/elviz.html
+++ b/elviz/web/elviz.html
@@ -47,6 +47,12 @@
             </ul>
         </div>
     </div>
+    <div id="stage3" style="display: none;">
+        <div class="sample_container high400 centerText">
+            <a href="#" id="replayButton">Replay</a><br />
+            <p id="replaytimer">0</p>
+        </div>
+    </div>
 
 </body>
 </html>
