Text replay is working!

--- a/elviz/web/elviz.html
+++ b/elviz/web/elviz.html
@@ -50,7 +50,7 @@
     <div id="stage3" style="display: none;">
         <div class="sample_container high400 centerText">
             <a href="#" id="replayButton">Replay</a><br />
-            <p id="replaytimer">0</p>
+            <div id="replayTargetContainer"></div>
         </div>
     </div>
 
