--- a/elviz/web/elviz.html
+++ b/elviz/web/elviz.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <h1>Elviz</h1>
-    <p>The lyric visualizer.</p>
+    <p>The lyric visualizer: YouTube videos + time-cued lyrics. <span style="opacity: 0.7;">This should work as long as the video doesn't start buffering halfway through...</span></p>
+    <p><a href="http://github.com/akersten/elviz">github.com/akersten/elviz</a></p>
     <h2 id="loader" class="centerText">Please wait...</h2>
     <div id="stage1" style="display:none;">
         <!-- The lyrics input box. -->
